10_08_22 Crash Issue Solved 7 PM

--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -388,7 +388,7 @@
                     android:background="@drawable/white_gray_strok_button"
                     android:orientation="vertical"
                     android:padding="@dimen/_8sdp"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvVariation"
@@ -537,7 +537,6 @@
                     </LinearLayout>
 
                 </LinearLayout>
-
 
                 <LinearLayout
                     android:id="@+id/llIsSeller"
